# wololo

./: Cargo.toml  Dockerfile  Justfile  README.md
src/: error.rs  mac_address.rs  main.rs  providers.rs  routes.rs
src/providers/: fritzbox.rs  static.rs
src/routes/: index.rs  mod.rs  util.rs  wake.rs
