[package]
name = "wololo"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
async-trait = "0.1"
axum = "0.7"
axum-embed = "0.1"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
maud = { version = "0.26", features = ["axum"] }
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = "0.12"
rust-embed = "8"
serde = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
wake-on-lan = "0.2"
